--- a/src/components/pages/About/About.module.css
+++ b/src/components/pages/About/About.module.css
@@ -3,6 +3,7 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	padding: var(--size-sm) 0;
 }
 
 .content {
@@ -50,4 +51,16 @@
 	left: 0;
 	right: 0;
 	bottom: 0;
+}
+@media (max-width: 768px) {
+	.section {
+		flex-direction: column;
+		align-items: center;
+		height: auto;
+	}
+	.asset {
+		width: 250px;
+		height: 250px;
+		margin-right: 0;
+	}
 }
